--- a/css/main.css
+++ b/css/main.css
@@ -66,8 +66,8 @@ header {
 
 .reservation {
   background-color: #2B2A27;
-  width: 330px;
-  height: 250px;
+  width: 260px;
+  height: 200px;
   position: relative; 
 }
 
@@ -130,7 +130,6 @@ header {
     height: 30px;
     color: #f4f4f4;
     vertical-align: top;
-    /* sorry couldn't center text vertically */
     padding-top: 4%;
     text-align: center;
     background-color: #000;
@@ -155,24 +154,22 @@ header {
   .calendar input[type="date"]{
     position: relative;
     text-align: center;
-    /* Add padding but 265 x 40 remains the same */
     box-sizing: border-box;
     padding: 5px;
-    width: 265px;
+    width: 200px;
     height: 40px;
     border-radius: 5px; 
     background: #f4f4f4 url(../images/calendar_icon.jpg);
     background-size: 30px;
     background-repeat: no-repeat;
     background-position: 90%;
-    font-size: 15px;
+    font-size: 13px;
     border: none;
     outline: none;
   }
   
   .calendar input[type="date"]::-webkit-calendar-picker-indicator{
     cursor: pointer;
-    /* noonsokim */
     width: 40px;
     opacity: 0;
   }
@@ -183,7 +180,7 @@ header {
     justify-content: center;
     text-align: center;
     color: white;
-    font-size: 15px;
+    font-size: 13px;
     gap: 30%;
   }
   
@@ -191,52 +188,6 @@ header {
     display: flex;
   }
   
-  .valueBtn{
-    height: 40px;
-    width: 130px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    background: #f4f4f4;
-    border-radius: 5px;
-    margin: 2% 0 0 10%;
-  }
-  
-  .valueBtn:nth-child(2){
-    margin-left: 2px;
-  }
-  
-  .valueBtn span{
-    width: 100%;
-    text-align: center;
-    font-size: 15px;
-    font-weight: 600;
-    cursor: pointer;
-  }
-  .valueBtn span.num{
-    font-size: 15px;
-    border-right: 2px solid rgba(0, 0, 0, 0.2);
-    border-left: 2px solid rgba(0, 0, 0, 0.2);
-    pointer-events: none;
-  }
-  
-  .buyNow {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 150px;
-    height: 55px;
-    font-size: 25px;
-    font-weight: 900;
-    background-color: #FEE50F;
-    border-radius: 10px;
-    position: absolute;
-    bottom: -50%; /* reservation 섹션의 아래 50%에 위치하도록 설정 */
-    left: 50%;
-    transform: translate(-50%, 50%); /* 아래로 50% 이동하여 가운데 정렬 */
-    cursor: pointer;
-  }
-
 /* promotion */
 
 .promotion {
@@ -488,14 +439,14 @@ padding-bottom: 3%;
 }
 
 .quickTab {
-  width: 330px;
+  width: 300px;
   display: table;
 }
 
 .quickTab ul li {
   display: table-cell;
-  width: 165px;
-  height: 30px;
+  width: 130px;
+  height: 25px;
   color: #f4f4f4;
   vertical-align: top;
   /* sorry couldn't center text vertically */
@@ -526,8 +477,8 @@ padding-bottom: 3%;
   /* Add padding but 265 x 40 remains the same */
   box-sizing: border-box;
   padding: 5px;
-  width: 265px;
-  height: 40px;
+  width: 200px;
+  height: 30px;
   border-radius: 5px; 
   background: #f4f4f4 url(../images/calendar_icon.jpg);
   background-size: 30px;
@@ -540,7 +491,6 @@ padding-bottom: 3%;
 
 .calendar input[type="date"]::-webkit-calendar-picker-indicator{
   cursor: pointer;
-  /* noonsokim */
   width: 40px;
   opacity: 0;
 }
@@ -560,14 +510,14 @@ padding-bottom: 3%;
 }
 
 .valueBtn{
-  height: 40px;
-  width: 130px;
+  height: 35px;
+  width: 100px;
   display: flex;
   align-items: center;
   justify-content: center;
   background: #f4f4f4;
   border-radius: 5px;
-  margin: 2% 0 0 10%;
+  margin: 2% 1% 0 10%;
 }
 
 .valueBtn:nth-child(2){
@@ -592,16 +542,15 @@ padding-bottom: 3%;
   display: flex;
   justify-content: center;
   align-items: center;
-  width: 150px;
-  height: 55px;
-  font-size: 25px;
-  font-weight: 900;
+  width: 120px;
+  height: 40px;
+  font-size: 20px;
   background-color: #FEE50F;
   border-radius: 10px;
   position: absolute;
   top: 100%;
   left: 50%;
-  transform: translate(-50%, -50%);
+  transform: translate(-50%, -60%);
   cursor: pointer;
 }
 
