--- a/css/main.css
+++ b/css/main.css
@@ -60,7 +60,7 @@ header {
   justify-content: center; 
   align-items: center; 
   background-color: #b22520;
-  height: 45vh; 
+  height: 44vh; 
 }
 
 .slider_box {
@@ -125,33 +125,6 @@ header {
     width: 48px;
 }
 
-/* RESERVATION */
-  
-  .quickTab {
-    width: 330px;
-    display: table;
-  }
-  
-  .quickTab ul li {
-    display: table-cell;
-    width: 155px;
-    height: 30px;
-    color: #f4f4f4;
-    vertical-align: top;
-    padding-top: 4%;
-    text-align: center;
-    background-color: #000;
-    font-size: 12px;
-  }
-  
-  .quickTab ul li.active {
-    background-color: #2B2A27;
-  }
-  
-  .quickTab ul li:hover {
-    cursor: pointer;
-  } 
-  
   /* RESERVATION / Calendar */
 
   .calendar{
@@ -162,6 +135,7 @@ header {
   
   .calendar input[type="date"]{
     position: relative;
+    margin-top: 2px;
     text-align: center;
     box-sizing: border-box;
     padding: 5px;
@@ -181,16 +155,6 @@ header {
     cursor: pointer;
     width: 40px;
     opacity: 0;
-  }
-  
-  .reservation .quantityTag{
-    display: flex;
-    margin-top: 7%;
-    justify-content: center;
-    text-align: center;
-    color: white;
-    font-size: 11px;
-    gap: 30%;
   }
   
   .wrapper{
@@ -462,6 +426,8 @@ padding-bottom: 3%;
   padding-top: 4%;
   text-align: center;
   background-color: #000;
+  font-size: 12px;
+  font-weight: 700;
 }
 
 .quickTab ul li.active {
@@ -505,12 +471,13 @@ padding-bottom: 3%;
 
 .reservation .quantityTag{
   display: flex;
-  margin-top: 7%;
+  margin: 6% 0 4% 0;
   justify-content: center;
   text-align: center;
   color: white;
   font-size: 11px;
   gap: 30%;
+  font-weight: 700;
 }
 
 .wrapper{
@@ -552,7 +519,7 @@ padding-bottom: 3%;
   align-items: center;
   width: 110px;
   height: 42px;
-  font-size: 17px;
+  font-size: 16px;
   font-weight: 900;
   background-color: #FEE50F;
   border-radius: 10px;
@@ -571,7 +538,7 @@ padding-bottom: 3%;
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 150px;
+  height: 148px;
   box-sizing: border-box; 
   background: #f5f5f5;
   padding: 0;
